--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,12 @@ dependencies = [
     "mcp[cli]>=1.2.1",
     "toml>=0.10.2",
     "importlib-metadata>=4.8.0",
-    "typing-extensions>=4.0.0"
+    "typing-extensions>=4.0.0",
+    # Phase 1 dependencies
+    "tomli>=2.0.0; python_version < '3.11'",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.0.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
