--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ dependencies = [
     "pydantic>=2.0.0",
     "python-dotenv>=1.0.0",
     "psutil>=5.9.0",
+    # Phase 1 Week 4 - Transport Layer
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "sse-starlette>=1.8.0",
+    "httpx>=0.25.0",
 ]
 
 [project.optional-dependencies]
