--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+#
+**/node_modules
+**/dist
+**/build
+**/.DS_Store
+**/.env
+**/.vscode
+**/.idea
+**/.pytest_cache
+**/.mypy_cache
+**/.venv
+**/.env.local
+**/*.log
+*.pyc
+**/__pycache__
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
