--- a/examples/simple-auth/requirements.txt
+++ b/examples/simple-auth/requirements.txt
@@ -2,6 +2,7 @@
 
 # HTTP server and client
 requests>=2.31.0
+httpx>=0.25.0
 
 # MCP SDK
 mcp>=1.2.1
@@ -12,3 +13,6 @@ uvicorn[standard]>=0.24.0
 
 # Optional: SSE support for MCP
 sse-starlette>=1.8.0
+
+# Pydantic AI with MCP support (for agent.py)
+pydantic-ai[mcp]>=0.0.14
