--- a/examples/mcp-auth/pyproject.toml
+++ b/examples/mcp-auth/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [
-    { name = "Datalayer", email = "info@datalayer.io" },
+    { name = "Datalayer", email = "info@datalayer.ai" },
 ]
 keywords = [
     "mcp",
