--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mcp_server_composer"
-authors = [{ name = "Datalayer", email = "info@datalayer.io" }]
+authors = [{ name = "Datalayer", email = "info@datalayer.ai" }]
 dynamic = ["version"]
 readme = "README.md"
 requires-python = ">=3.10"
